fixed tile spacing and remove fullscreen modal

--- a/packages/itwin/reports-config-widget/src/widget/components/AddMappingsModal.scss
+++ b/packages/itwin/reports-config-widget/src/widget/components/AddMappingsModal.scss
@@ -5,13 +5,12 @@
 @import '~@itwin/itwinui-css/scss/variables';
 
 .add-mappings-container {
-  overflow-x: auto;
-  height: 100%;
   display: flex;
   flex-direction: column;
   gap: $iui-baseline;
   width: 45vw;
   min-width: 100%;
+  overflow: auto;
   .add-mappings-table {
     flex-grow: 1;
     overflow: auto;
