--- a/packages/itwin/reports-config-widget/src/widget/components/ReportMappings.scss
+++ b/packages/itwin/reports-config-widget/src/widget/components/ReportMappings.scss
@@ -33,7 +33,7 @@
   .mapping-list {
     display: flex;
     flex-direction: column;
-    overflow-y: auto;
+    overflow-y: overlay;
     gap: 7.5px;
     margin-top: 7.5px;
   }
